added scrip to generate training data from CODD dataset

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bacterial-nerve",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "utility-burst",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,10 @@
     "# d1 = np.append(d1_1, d1_2, axis = 0)\n",
     "# d2 = np.append(d2_1, d2_2, axis = 0)\n",
     "# gt = np.append(gt_1, gt_2, axis = 0)\n",
+    "\n",
+    "# d1 = np.load(\"D:/TrainingData/Ford_scan1_50pts_large_displacement.npy\")\n",
+    "# d2 = np.load(\"D:/TrainingData/Ford_scan2_50pts_large_displacement.npy\")\n",
+    "# gt = np.load(\"D:/TrainingData/Ford_ground_truth_50pts_large_displacement.npy\")\n",
     "# #_________________________________________________________________\n",
     "\n",
     "#Single datset\n",
@@ -123,7 +127,7 @@
     "# gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
     "# gt = gt*0.1 #scale to match real-world data (vel-> pos)\n",
     "#_________________________________________________________________\n",
-    "\n",
+    "#old\n",
     "d1 = np.load(\"training_data/compact_scan1.npy\")\n",
     "d2 = np.load(\"training_data/compact_scan2.npy\")\n",
     "gt = np.load(\"training_data/compact_ground_truth.npy\")\n",
@@ -131,6 +135,14 @@
     "L = np.load(\"training_data/L.npy\")\n",
     "U = np.load(\"training_data/U.npy\")\n",
     "corn = np.load(\"training_data/corn.npy\")\n",
+    "#new\n",
+    "# d1 = np.load(\"D:/TrainingData/compact/compact_scan1.npy\")\n",
+    "# d2 = np.load(\"D:/TrainingData/compact/compact_scan2.npy\")\n",
+    "# gt = np.load(\"D:/TrainingData/compact/compact_ground_truth.npy\")\n",
+    "# LUT = np.load(\"D:/TrainingData/compact/LUT.npy\")\n",
+    "# L = np.load(\"D:/TrainingData/compact/L.npy\")\n",
+    "# U = np.load(\"D:/TrainingData/compact/U.npy\")\n",
+    "# corn = np.load(\"D:/TrainingData/compact/corn.npy\")\n",
     "#_________________________________________________________________\n",
     "\n",
     "\n",
@@ -149,6 +161,7 @@
     "\n",
     "y_train = gt[:ntrain] #for standard training/ test data\n",
     "y_test = gt[ntrain:]\n",
+    "\n",
     "# y_train = gt[:ntrain][:,:,0] #when using compact data\n",
     "# y_test = gt[ntrain:][:,:,0]\n",
     "LUT = tf.convert_to_tensor(LUT)[ntrain:]\n",
@@ -168,19 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
    "source": [
     "# model = tf.keras.models.load_model(\"FORDNetV3.kmod\")\n",
-    "model = tf.keras.models.load_model(\"Net.kmod\")\n",
+    "model = tf.keras.models.load_model(\"FORDNet.kmod\")\n",
+    "# model = tf.keras.models.load_model(\"Net.kmod\")\n",
     "# model = tf.keras.models.load_model(\"FORDNetCP.kmod\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "floppy-wealth",
    "metadata": {},
    "outputs": [],
@@ -196,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -232,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "quiet-philip",
    "metadata": {},
    "outputs": [
@@ -240,25 +254,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "420\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
+      "418\n",
+      "1/1 [==============================] - 0s 121ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
       "1/1 [==============================] - 0s 14ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
       "\n",
-      " correct soln [-0.7829821  -0.8573041  -0.06181115]\n",
+      " correct soln [ 1.0476127   0.29435652 -0.05423797]\n",
       "\n",
-      " estiamted soln: [[-0.73927922 -0.90048453 -0.11845285]]\n",
+      " estiamted soln: [[ 1.08427467  0.29160915 -0.04676693]]\n",
       "\n",
-      " error from DNN: [[-0.04370289  0.04318043  0.0566417 ]]\n",
+      " error from DNN: [[-0.03666201  0.00274738 -0.00747105]]\n",
       "\n",
-      " error in means [-0.01054788  0.05763483  0.03111309]\n"
+      " error in means [-0.01978731  0.05850905 -0.0014943 ]\n"
      ]
     }
    ],
@@ -291,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "active-liverpool",
    "metadata": {},
    "outputs": [
@@ -299,8 +313,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-0.7544794   0.01877005  0.04665719], shape=(3,), dtype=float32)\n"
+      "soln_compact_xyz: \n",
+      " tf.Tensor([ 1.0438347  -0.01112934 -0.06288379], shape=(3,), dtype=float32)\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29ada3cab2cb4ee593abec24e74928ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -320,14 +349,15 @@
     "disp.append(Points(x_test[n,points_per_sample:], c = 'blue', r = 5))\n",
     "\n",
     "#Draw arrow for ground truth soln vec\n",
-    "disp.append(Arrow(mean1 + y_test[n], mean1, c = 'y4', res = 100)) #arbitrarily start arrow from scan1 center\n",
+    "# disp.append(Arrow(mean1 + y_test[n], mean1, c = 'y4', s = 0.002, res = 100)) #arbitrarily start arrow from scan1 center\n",
+    "disp.append(Arrow(mean2, mean2 - y_test[n], c = 'y4', s = 0.002, res = 100))\n",
     "\n",
     "#draw ground truth arrow cut short by U and L\n",
     "soln_compact = tf.matmul(LUT[n], y_test[n][:, None])\n",
     "soln_compact_xyz = tf.matmul(U[n], soln_compact)[:,0]\n",
     "# soln_compact_xyz = tf.matmul(tf.transpose(U[n]), soln_compact)[:,0]\n",
-    "print(soln_compact_xyz)\n",
-    "disp.append(Arrow( mean2, mean2 - soln_compact_xyz, c = 'p4', res = 100)) #arbitrarily start arrow from scan1 center\n",
+    "print(\"soln_compact_xyz: \\n\", soln_compact_xyz)\n",
+    "disp.append(Arrow( mean2, mean2 - soln_compact_xyz, c = 'p4', s = 0.002, res = 100)) #arbitrarily start arrow from scan1 center\n",
     "\n",
     "#draw the set of 8 points that defined the voxel boundaries for the keyframe scan\n",
     "corn_cart = s2c(corn_test[n])\n",
@@ -335,8 +365,8 @@
     "\n",
     "#draw box instead of individual points______________________________\n",
     "p1, p2, p3, p4, p5, p6, p7, p8 = corn_cart.numpy()\n",
-    "print(p1)\n",
-    "print(p2)\n",
+    "# print(p1)\n",
+    "# print(p2)\n",
     "lineWidth = 2\n",
     "c1 = \"black\"\n",
     "\n",
@@ -379,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "proud-puzzle",
    "metadata": {},
    "outputs": [
@@ -388,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "x_test tf.Tensor([1472  100    3], shape=(3,), dtype=int32)\n",
-      "46/46 [==============================] - 1s 21ms/step\n",
+      "46/46 [==============================] - 0s 9ms/step\n",
       "\n",
       " correct soln \n",
       " [[-1.5052794  -0.061748   -0.02118067]\n",
@@ -400,25 +430,25 @@
       " [-0.7231753   0.3887675  -0.00653277]]\n",
       "\n",
       " estiamted soln: \n",
-      " [[-1.77532375 -0.01228124  0.09839122]\n",
-      " [-0.69614494 -0.58025914  0.00329802]\n",
-      " [ 0.14363322  0.43549585  0.01154036]\n",
+      " [[-1.51778984 -0.10379839 -0.00981368]\n",
+      " [-0.70197749 -0.57185304  0.04397372]\n",
+      " [ 0.20685913  0.4180865  -0.03919144]\n",
       " ...\n",
-      " [-0.00263295  1.44141853  0.02813716]\n",
-      " [-1.83761263 -1.82595229 -0.02787037]\n",
-      " [-0.76068491  0.53415525  0.08283281]]\n",
+      " [ 0.10216433  1.3733567  -0.06696773]\n",
+      " [-1.8949188  -1.68925703 -0.01933809]\n",
+      " [-0.75077879  0.40737346 -0.06907012]]\n",
       "\n",
       " error from DNN: \n",
-      " [[ 0.27004433 -0.04946677 -0.11957189]\n",
-      " [-0.03064901  0.03062671  0.05572001]\n",
-      " [ 0.15218037  0.01136774 -0.05883333]\n",
+      " [[ 0.01251042  0.04205039 -0.01136698]\n",
+      " [-0.02481645  0.02222061  0.01504432]\n",
+      " [ 0.08895446  0.02877709 -0.00810153]\n",
       " ...\n",
-      " [ 0.01581588 -0.0603888  -0.07557259]\n",
-      " [ 0.0253849  -0.04342103 -0.01510694]\n",
-      " [ 0.03750962 -0.14538774 -0.08936557]]\n",
+      " [-0.0889814   0.00767303  0.01953229]\n",
+      " [ 0.08269107 -0.1801163  -0.02363922]\n",
+      " [ 0.02760351 -0.01860595  0.06253735]]\n",
       "\n",
       " mean raw DNN error: \n",
-      " [0.08203186 0.0869071  0.08016124]\n",
+      " [0.03108043 0.02920488 0.01566128]\n",
       "\n",
       " mean raw D2D error \n",
       " [0.027099   0.03634313 0.02510454]\n"
@@ -465,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "understanding-gibson",
    "metadata": {},
    "outputs": [
@@ -475,10 +505,10 @@
      "text": [
       "\n",
       " mean compact error DNN: \n",
-      " 0.07649226\n",
+      " [0.02048171 0.00900044 0.0086933 ]\n",
       "\n",
       " mean compact error D2D: \n",
-      " 0.014100906\n"
+      " [0.01182726 0.00521016 0.00563965]\n"
      ]
     }
    ],
@@ -497,10 +527,12 @@
     "truth_compact = tf.matmul(LUT, y_test[:,:,None])\n",
     "truth_compact_xyz = tf.matmul(U, truth_compact)\n",
     "\n",
-    "error_DNN_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz - dnn_compact_xyz), axis = 0)**2 ))\n",
+    "# error_DNN_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz - dnn_compact_xyz), axis = 0)**2 ))\n",
+    "error_DNN_compact = np.sqrt( np.mean(np.abs(truth_compact_xyz - dnn_compact_xyz), axis = 0)**2 )[:,0]\n",
     "print(\"\\n mean compact error DNN: \\n\", error_DNN_compact)\n",
     "\n",
-    "error_D2D_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 ))\n",
+    "# error_D2D_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 ))\n",
+    "error_D2D_compact = np.sqrt(np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 )[:,0]\n",
     "print(\"\\n mean compact error D2D: \\n\", error_D2D_compact)\n",
     "\n"
    ]
@@ -540,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
