--- a/v3/perspective_shift/tf_data_demo.ipynb
+++ b/v3/perspective_shift/tf_data_demo.ipynb
@@ -329,13 +329,7 @@
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
       "INFO:tensorflow:Assets written to: FordNetCP.kmod\\assets\n",
       "906/906 [==============================] - 22s 24ms/step - loss: 0.0759 - val_loss: 0.0586\n",
-      "Epoch 19/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 19/300\n",
       "906/906 [==============================] - 19s 21ms/step - loss: 0.0764 - val_loss: 0.0624\n",
       "Epoch 20/300\n",
       "904/906 [============================>.] - ETA: 0s - loss: 0.0734- ETA: 0s - loss: 0.WARNING:tensorflow:AutoGraph could not transform <function canonicalize_signatures.<locals>.signature_wrapper at 0x000001FAEB5F8AF8> and will run it as-is.\n",
@@ -545,13 +539,7 @@
       "906/906 [==============================] - 19s 21ms/step - loss: 0.0518 - val_loss: 0.0366\n",
       "Epoch 75/300\n",
       "906/906 [==============================] - 21s 23ms/step - loss: 0.0514 - val_loss: 0.0384\n",
-      "Epoch 76/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 76/300\n",
       "906/906 [==============================] - 21s 23ms/step - loss: 0.0514 - val_loss: 0.0419\n",
       "Epoch 77/300\n",
       "906/906 [==============================] - 21s 23ms/step - loss: 0.0509 - val_loss: 0.0398\n",
@@ -790,13 +778,7 @@
       "906/906 [==============================] - 21s 24ms/step - loss: 0.0449 - val_loss: 0.0334\n",
       "Epoch 160/300\n",
       "906/906 [==============================] - 19s 21ms/step - loss: 0.0438 - val_loss: 0.0379\n",
-      "Epoch 161/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 161/300\n",
       "906/906 [==============================] - 19s 21ms/step - loss: 0.0442 - val_loss: 0.0360\n",
       "Epoch 162/300\n",
       "906/906 [==============================] - 19s 21ms/step - loss: 0.0445 - val_loss: 0.0343\n",
@@ -1183,7 +1165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1197,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
