--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -19,15 +19,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bacterial-nerve",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-27 22:45:47.839187: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-09-27 22:45:47.926268: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-09-27 22:45:48.248672: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-09-27 22:45:48.248705: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-09-27 22:45:48.248710: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9.1\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
+      "2.10.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-27 22:45:49.067560: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:45:49.091278: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:45:49.091422: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     },
     {
@@ -55,10 +77,15 @@
     "import scipy.io as sio\n",
     "import datetime\n",
     "\n",
-    "#need to have these two lines to work on my ancient 1060 3gb\n",
-    "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
-    "# physical_devices = tf.config.list_physical_devices('GPU') \n",
-    "# tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "#limit GPU memory ------------------------------------------------\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "print(gpus)\n",
+    "if gpus:\n",
+    "  try:\n",
+    "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=4096)])\n",
+    "  except RuntimeError as e:\n",
+    "    print(e)\n",
+    "#-----------------------------------------------------------------\n",
     "\n",
     "print(tf.__version__) #requires tensorflow 2.3\n",
     "\n",
@@ -71,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "utility-burst",
    "metadata": {},
    "outputs": [
@@ -79,72 +106,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1471, 100, 3)\n",
-      "(1472, 100, 3)\n"
+      "(12260, 100, 3)\n",
+      "(12260, 100, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-27 22:50:31.276640: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-09-27 22:50:31.277236: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.277374: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.277467: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.572427: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.572561: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.572664: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-09-27 22:50:31.572745: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
      ]
     }
    ],
    "source": [
-    "#Load data directly from numpy files-- KEEP IN RAM (DO NOT CONVERT TO TF Tensor!!!)\n",
-    "# #_________________________________________________________________\n",
-    "# #load individual data numpy files\n",
-    "# d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan1.npy\")\n",
-    "# d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan2.npy\")\n",
-    "# gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_ground_truth.npy\")\n",
-    "# # d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan1.npy\")\n",
-    "# # d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan2.npy\")\n",
-    "# # gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_ground_truth.npy\")\n",
-    "\n",
-    "# # d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan1_300k_50_samples.npy\")\n",
-    "# # d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan2_300k_50_samples.npy\")\n",
-    "# # gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
-    "# # gt_1 = gt_1*0.1 #scale to match real-world data (vel-> pos)\n",
-    "\n",
-    "# # d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan1.npy\")\n",
-    "# # d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan2.npy\")\n",
-    "# # gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_ground_truth.npy\")\n",
-    "# d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan1.npy\")\n",
-    "# d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan2.npy\")\n",
-    "# gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_ground_truth.npy\")\n",
-    "\n",
-    "\n",
-    "# d1 = np.append(d1_1, d1_2, axis = 0)\n",
-    "# d2 = np.append(d2_1, d2_2, axis = 0)\n",
-    "# gt = np.append(gt_1, gt_2, axis = 0)\n",
-    "\n",
-    "# d1 = np.load(\"D:/TrainingData/Ford_scan1_50pts_large_displacement.npy\")\n",
-    "# d2 = np.load(\"D:/TrainingData/Ford_scan2_50pts_large_displacement.npy\")\n",
-    "# gt = np.load(\"D:/TrainingData/Ford_ground_truth_50pts_large_displacement.npy\")\n",
-    "# #_________________________________________________________________\n",
-    "\n",
-    "#Single datset\n",
-    "# d1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan1.npy\")\n",
-    "# d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan2.npy\")\n",
-    "# gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_ground_truth.npy\")\n",
-    "\n",
-    "# d1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan1_300k_50_samples.npy\")\n",
-    "# d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan2_300k_50_samples.npy\")\n",
-    "# gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
-    "# gt = gt*0.1 #scale to match real-world data (vel-> pos)\n",
-    "#_________________________________________________________________\n",
-    "#old\n",
+    "#load test data\n",
     "d1 = np.load(\"training_data/compact_scan1.npy\")\n",
     "d2 = np.load(\"training_data/compact_scan2.npy\")\n",
-    "gt = np.load(\"training_data/compact_ground_truth.npy\")\n",
+    "gt = np.load(\"training_data/ground_truth.npy\")\n",
+    "cgt = np.load(\"training_data/compact_ground_truth.npy\")\n",
     "LUT = np.load(\"training_data/LUT.npy\")\n",
     "L = np.load(\"training_data/L.npy\")\n",
     "U = np.load(\"training_data/U.npy\")\n",
     "corn = np.load(\"training_data/corn.npy\")\n",
-    "#new\n",
-    "# d1 = np.load(\"D:/TrainingData/compact/compact_scan1.npy\")\n",
-    "# d2 = np.load(\"D:/TrainingData/compact/compact_scan2.npy\")\n",
-    "# gt = np.load(\"D:/TrainingData/compact/compact_ground_truth.npy\")\n",
-    "# LUT = np.load(\"D:/TrainingData/compact/LUT.npy\")\n",
-    "# L = np.load(\"D:/TrainingData/compact/L.npy\")\n",
-    "# U = np.load(\"D:/TrainingData/compact/U.npy\")\n",
-    "# corn = np.load(\"D:/TrainingData/compact/corn.npy\")\n",
-    "#_________________________________________________________________\n",
-    "\n",
     "\n",
     "#reshape but don't convert to tensor\n",
     "points_per_sample = 50          #poitns sammpled from each voxel\n",
@@ -168,33 +159,23 @@
     "U = tf.convert_to_tensor(U)[ntrain:]\n",
     "L = tf.convert_to_tensor(L)[ntrain:]\n",
     "corn_train = corn[:ntrain]\n",
-    "corn_test = corn[ntrain:]\n",
-    "\n",
-    "# print(y_train)\n",
-    "# print(np.shape(y_train))\n",
-    "# print(np.shape(y_test))\n",
-    "# print(np.shape(gt))\n",
-    "# print(np.shape(corn))\n",
-    "# print(corn)\n",
-    "#-------------------------------------------------------------------"
+    "corn_test = corn[ntrain:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = tf.keras.models.load_model(\"FORDNetV3.kmod\")\n",
-    "model = tf.keras.models.load_model(\"FORDNet.kmod\")\n",
-    "# model = tf.keras.models.load_model(\"Net.kmod\")\n",
-    "# model = tf.keras.models.load_model(\"FORDNetCP.kmod\")"
+    "model = tf.keras.models.load_model(\"KITTInet.kmod\")\n",
+    "# model = tf.keras.models.load_model(\"CP.kmod\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "floppy-wealth",
    "metadata": {},
    "outputs": [],
@@ -210,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -246,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "id": "quiet-philip",
    "metadata": {},
    "outputs": [
@@ -254,25 +235,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "418\n",
-      "1/1 [==============================] - 0s 121ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
+      "162\n",
+      "1/1 [==============================] - 0s 10ms/step\n",
+      "1/1 [==============================] - 0s 10ms/step\n",
       "\n",
-      " correct soln [ 1.0476127   0.29435652 -0.05423797]\n",
+      " correct soln [1.6382637  0.47738773 1.5255338 ]\n",
       "\n",
-      " estiamted soln: [[ 1.08427467  0.29160915 -0.04676693]]\n",
+      " estiamted soln: [[1.67729303 0.46707976 1.27829373]]\n",
       "\n",
-      " error from DNN: [[-0.03666201  0.00274738 -0.00747105]]\n",
+      " error from DNN: [[-0.03902933  0.01030796  0.24724007]]\n",
       "\n",
-      " error in means [-0.01978731  0.05850905 -0.0014943 ]\n"
+      " error in means [-0.02254307  0.02739984  0.02640271]\n"
      ]
     }
    ],
@@ -285,7 +258,7 @@
     "c2 = np.array([x_test[n,points_per_sample:,0], x_test[n,points_per_sample:,1], x_test[n,points_per_sample:,2]])\n",
     "\n",
     "inputs = x_test[n][None,:]\n",
-    "runlen = 10\n",
+    "runlen = 2\n",
     "corr_sum = np.zeros([1,3]) #init var to store correction contributions\n",
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[0] #show what the network thinks\n",
@@ -305,7 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "2ad039ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "active-liverpool",
    "metadata": {},
    "outputs": [
@@ -314,18 +295,18 @@
      "output_type": "stream",
      "text": [
       "soln_compact_xyz: \n",
-      " tf.Tensor([ 1.0438347  -0.01112934 -0.06288379], shape=(3,), dtype=float32)\n"
+      " tf.Tensor([ 0.0718215   0.40911397 -0.07713326], shape=(3,), dtype=float32)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29ada3cab2cb4ee593abec24e74928ff",
+       "model_id": "89130f8382ed4468ba9a585895735e2c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1397)"
       ]
      },
      "metadata": {},
@@ -355,7 +336,7 @@
     "#draw ground truth arrow cut short by U and L\n",
     "soln_compact = tf.matmul(LUT[n], y_test[n][:, None])\n",
     "soln_compact_xyz = tf.matmul(U[n], soln_compact)[:,0]\n",
-    "# soln_compact_xyz = tf.matmul(tf.transpose(U[n]), soln_compact)[:,0]\n",
+    "soln_compact_xyz = tf.matmul(tf.transpose(U[n]), soln_compact)[:,0]\n",
     "print(\"soln_compact_xyz: \\n\", soln_compact_xyz)\n",
     "disp.append(Arrow( mean2, mean2 - soln_compact_xyz, c = 'p4', s = 0.002, res = 100)) #arbitrarily start arrow from scan1 center\n",
     "\n",
@@ -409,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "proud-puzzle",
    "metadata": {},
    "outputs": [
@@ -417,41 +398,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_test tf.Tensor([1472  100    3], shape=(3,), dtype=int32)\n",
-      "46/46 [==============================] - 0s 9ms/step\n",
+      "x_test tf.Tensor([12260   100     3], shape=(3,), dtype=int32)\n",
+      "384/384 [==============================] - 1s 1ms/step\n",
       "\n",
       " correct soln \n",
-      " [[-1.5052794  -0.061748   -0.02118067]\n",
-      " [-0.72679394 -0.54963243  0.05901803]\n",
-      " [ 0.2958136   0.4468636  -0.04729297]\n",
+      " [[ 0.9814831  -0.17602861 -1.5250226 ]\n",
+      " [-0.37280306  0.71115476 -0.943462  ]\n",
+      " [ 0.4256593   0.3306437   0.25062585]\n",
       " ...\n",
-      " [ 0.01318293  1.3810297  -0.04743544]\n",
-      " [-1.8122277  -1.8693733  -0.04297731]\n",
-      " [-0.7231753   0.3887675  -0.00653277]]\n",
+      " [ 3.7600217  -1.3633529  -0.09132093]\n",
+      " [ 0.03050299  0.63155997  0.33192906]\n",
+      " [ 0.00528116  2.518143    0.2139193 ]]\n",
       "\n",
       " estiamted soln: \n",
-      " [[-1.51778984 -0.10379839 -0.00981368]\n",
-      " [-0.70197749 -0.57185304  0.04397372]\n",
-      " [ 0.20685913  0.4180865  -0.03919144]\n",
+      " [[ 8.62124562e-01 -9.21205580e-02 -8.83652925e-01]\n",
+      " [-4.14431393e-01  4.34967041e-01 -5.34572423e-01]\n",
+      " [ 3.96568835e-01  3.50146323e-01  2.62679994e-01]\n",
       " ...\n",
-      " [ 0.10216433  1.3733567  -0.06696773]\n",
-      " [-1.8949188  -1.68925703 -0.01933809]\n",
-      " [-0.75077879  0.40737346 -0.06907012]]\n",
+      " [ 3.82962704e+00 -1.22965384e+00  2.40137195e-03]\n",
+      " [ 2.89848484e-02  5.92733860e-01  3.24466348e-01]\n",
+      " [ 5.58916554e-02  2.53413630e+00  2.19279960e-01]]\n",
       "\n",
       " error from DNN: \n",
-      " [[ 0.01251042  0.04205039 -0.01136698]\n",
-      " [-0.02481645  0.02222061  0.01504432]\n",
-      " [ 0.08895446  0.02877709 -0.00810153]\n",
+      " [[ 0.11935854 -0.08390805 -0.6413697 ]\n",
+      " [ 0.04162833  0.27618772 -0.40888959]\n",
+      " [ 0.02909046 -0.01950261 -0.01205415]\n",
       " ...\n",
-      " [-0.0889814   0.00767303  0.01953229]\n",
-      " [ 0.08269107 -0.1801163  -0.02363922]\n",
-      " [ 0.02760351 -0.01860595  0.06253735]]\n",
+      " [-0.06960535 -0.13369906 -0.0937223 ]\n",
+      " [ 0.00151814  0.03882611  0.00746271]\n",
+      " [-0.0506105  -0.01599336 -0.00536066]]\n",
       "\n",
       " mean raw DNN error: \n",
-      " [0.03108043 0.02920488 0.01566128]\n",
+      " [0.20788168 0.22087188 0.41234964]\n",
       "\n",
       " mean raw D2D error \n",
-      " [0.027099   0.03634313 0.02510454]\n"
+      " [0.04239465 0.04467432 0.02369623]\n"
      ]
     }
    ],
@@ -495,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "understanding-gibson",
    "metadata": {},
    "outputs": [
@@ -505,10 +486,10 @@
      "text": [
       "\n",
       " mean compact error DNN: \n",
-      " [0.02048171 0.00900044 0.0086933 ]\n",
+      " [0.1183895  0.13934372 0.14059488]\n",
       "\n",
       " mean compact error D2D: \n",
-      " [0.01182726 0.00521016 0.00563965]\n"
+      " [0.01307738 0.01476391 0.00778655]\n"
      ]
     }
    ],
