more network training, messing with raw LIDAR translations

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -19,56 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bacterial-nerve",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-27 22:45:47.839187: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-27 22:45:47.926268: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-09-27 22:45:48.248672: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-09-27 22:45:48.248705: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-09-27 22:45:48.248710: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-      "2.10.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-27 22:45:49.067560: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:45:49.091278: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:45:49.091422: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#setup\n",
     "import numpy as np\n",
@@ -98,34 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "utility-burst",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12260, 100, 3)\n",
-      "(12260, 100, 3)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-27 22:50:31.276640: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-27 22:50:31.277236: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.277374: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.277467: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.572427: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.572561: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.572664: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-09-27 22:50:31.572745: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load test data\n",
     "d1 = np.load(\"training_data/compact_scan1.npy\")\n",
@@ -164,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
@@ -175,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "floppy-wealth",
    "metadata": {},
    "outputs": [],
@@ -191,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -227,28 +157,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "quiet-philip",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "162\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "\n",
-      " correct soln [1.6382637  0.47738773 1.5255338 ]\n",
-      "\n",
-      " estiamted soln: [[1.67729303 0.46707976 1.27829373]]\n",
-      "\n",
-      " error from DNN: [[-0.03902933  0.01030796  0.24724007]]\n",
-      "\n",
-      " error in means [-0.02254307  0.02739984  0.02640271]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(np.floor(500*np.random.rand()))\n",
     "# n = 0\n",
@@ -279,40 +191,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ad039ea",
+   "id": "e7d73081",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "active-liverpool",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soln_compact_xyz: \n",
-      " tf.Tensor([ 0.0718215   0.40911397 -0.07713326], shape=(3,), dtype=float32)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89130f8382ed4468ba9a585895735e2c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1397)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#use Vedo to plot inital and transformed point clouds in 3D \n",
     "from vedo import *\n",
@@ -385,57 +274,16 @@
    "id": "classified-christopher",
    "metadata": {},
    "source": [
-    "### Run network on all test data"
+    "### Run network on all test data \n",
+    "# DEBUG HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "proud-puzzle",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_test tf.Tensor([12260   100     3], shape=(3,), dtype=int32)\n",
-      "384/384 [==============================] - 1s 1ms/step\n",
-      "\n",
-      " correct soln \n",
-      " [[ 0.9814831  -0.17602861 -1.5250226 ]\n",
-      " [-0.37280306  0.71115476 -0.943462  ]\n",
-      " [ 0.4256593   0.3306437   0.25062585]\n",
-      " ...\n",
-      " [ 3.7600217  -1.3633529  -0.09132093]\n",
-      " [ 0.03050299  0.63155997  0.33192906]\n",
-      " [ 0.00528116  2.518143    0.2139193 ]]\n",
-      "\n",
-      " estiamted soln: \n",
-      " [[ 8.62124562e-01 -9.21205580e-02 -8.83652925e-01]\n",
-      " [-4.14431393e-01  4.34967041e-01 -5.34572423e-01]\n",
-      " [ 3.96568835e-01  3.50146323e-01  2.62679994e-01]\n",
-      " ...\n",
-      " [ 3.82962704e+00 -1.22965384e+00  2.40137195e-03]\n",
-      " [ 2.89848484e-02  5.92733860e-01  3.24466348e-01]\n",
-      " [ 5.58916554e-02  2.53413630e+00  2.19279960e-01]]\n",
-      "\n",
-      " error from DNN: \n",
-      " [[ 0.11935854 -0.08390805 -0.6413697 ]\n",
-      " [ 0.04162833  0.27618772 -0.40888959]\n",
-      " [ 0.02909046 -0.01950261 -0.01205415]\n",
-      " ...\n",
-      " [-0.06960535 -0.13369906 -0.0937223 ]\n",
-      " [ 0.00151814  0.03882611  0.00746271]\n",
-      " [-0.0506105  -0.01599336 -0.00536066]]\n",
-      "\n",
-      " mean raw DNN error: \n",
-      " [0.20788168 0.22087188 0.41234964]\n",
-      "\n",
-      " mean raw D2D error \n",
-      " [0.04239465 0.04467432 0.02369623]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for n in range(numToTest):\n",
     "c1 = np.array([x_test[:,:points_per_sample,0], x_test[:,:points_per_sample,1], x_test[:,:points_per_sample,2]])\n",
@@ -476,23 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "understanding-gibson",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " mean compact error DNN: \n",
-      " [0.1183895  0.13934372 0.14059488]\n",
-      "\n",
-      " mean compact error D2D: \n",
-      " [0.01307738 0.01476391 0.00778655]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#just considering the residuals doesn't tell the whole story \n",
     "#   we need to consider error in COMPACT only directions\n",
