--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -99,7 +99,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 16*1024\n",
+    "    memlim = 20*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
     "    print(e)\n",
@@ -237,17 +237,40 @@
     "\n",
     "\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan1_100pts.npy\")\n",
-    "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan2_100pts.npy\")\n",
-    "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_ground_truth_100pts.npy\")\n",
+    "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan1_100pts.npy\")\n",
+    "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan2_100pts.npy\")\n",
+    "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_ground_truth_100pts.npy\")\n",
     "\n",
-    "# d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_02_scan1_100pts.npy\")\n",
-    "# d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_02_scan2_100pts.npy\")\n",
-    "# gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_02_ground_truth_100pts.npy\")\n",
+    "d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan1_100pts.npy\")\n",
+    "d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan2_100pts.npy\")\n",
+    "gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_ground_truth_100pts.npy\")\n",
+    "d1 = np.append(d1, d1_2, axis = 0)\n",
+    "d2 = np.append(d2, d2_2, axis = 0)\n",
+    "gt = np.append(gt, gt_2, axis = 0)\n",
     "\n",
-    "# d1 = np.append(d1, d1_2, axis = 0)\n",
-    "# d2 = np.append(d2, d2_2, axis = 0)\n",
-    "# gt = np.append(gt, gt_2, axis = 0)\n",
+    "d1_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan1_100pts_skip3.npy\")\n",
+    "d2_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan2_100pts_skip3.npy\")\n",
+    "gt_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_ground_truth_100pts_skip3.npy\")\n",
+    "d1 = np.append(d1, d1_4, axis = 0)\n",
+    "d2 = np.append(d2, d2_4, axis = 0)\n",
+    "gt = np.append(gt, gt_4, axis = 0)\n",
+    "\n",
+    "d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
+    "d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
+    "gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
+    "d1 = np.append(d1, d1_5, axis = 0)\n",
+    "d2 = np.append(d2, d2_5, axis = 0)\n",
+    "gt = np.append(gt, gt_5, axis = 0)\n",
+    "\n",
+    "# d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan1_100pts.npy\")\n",
+    "# d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan2_100pts.npy\")\n",
+    "# gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_ground_truth_100pts.npy\")\n",
+    "d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan1_100pts_skip3.npy\")\n",
+    "d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan2_100pts_skip3.npy\")\n",
+    "gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_ground_truth_100pts_skip3.npy\")\n",
+    "d1 = np.append(d1, d1_3, axis = 0)\n",
+    "d2 = np.append(d2, d2_3, axis = 0)\n",
+    "gt = np.append(gt, gt_3, axis = 0)\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "\n",
@@ -454,8 +477,8 @@
    "source": [
     "def augment(points, gt):\n",
     "    # jitter points\n",
-    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float32)\n",
-    "#     points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float64) #try this if above doesn't work\n",
+    "#     points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float32)\n",
+    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float64) #try this if above doesn't work\n",
     "\n",
     "    # shuffle points in first point cloud\n",
     "#     points = tf.concat([tf.random.shuffle(points[:50]), tf.random.shuffle(points[50:100]), points[100:]], axis = 0)\n",
@@ -463,15 +486,15 @@
     "\n",
     "    #TEST- shuffle and randomly translate cloud 2 and ground truth -- why is this not working???\n",
     "    shift_scale = 0.1 #don't want to make this too large for PC to reach in 1 iter(?)\n",
-    "#     shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float64) #debug\n",
-    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) #debug\n",
+    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float64) #debug\n",
+    "#     shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) #debug\n",
     "#     points = tf.concat([tf.random.shuffle(points[:50]), tf.random.shuffle(points[50:]) + shift[:3]], axis = 0)\n",
     "    points = tf.concat([tf.random.shuffle(points[:100]), tf.random.shuffle(points[100:]) + shift[:3]], axis = 0)\n",
     "    gt += shift\n",
     "\n",
     "    return points, gt\n",
     "\n",
-    "BATCH_SIZE =  256\n",
+    "BATCH_SIZE =  1024\n",
     "\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train))\n",
     "train_dataset = train_dataset.shuffle(len(x_train)).map(augment).batch(BATCH_SIZE)\n",
@@ -540,7 +563,7 @@
     "        learning_rate = 0.00001\n",
     "        return learning_rate\n",
     "\n",
-    "model = Net() #comment out to re-train existing network\n",
+    "# model = Net() #comment out to re-train existing network\n",
     "model.compile(optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0001),\n",
     "              loss = tf.keras.losses.MeanAbsoluteError()) #was MeanSquaredError()\n",
     "\n",
@@ -636,7 +659,7 @@
     "\n",
     "\\text{KITTI 91 skip3 (100pts)} & 0.050 & 128 & 32 & \\text {KITTINet100.kmod } \\\\\n",
     "\n",
-    "\\text{KITTI_CARLA 1 (100pts)} & 0.078 & 1024 & 32 & \\text {KITTICARLA100.kmod } \\\\\n",
+    "\\text{KITTI_CARLA 1,3 KITTI 91, 95 (100pts)} & 0.0403 & 1024 & 16 & \\text {KITTICARLA100.kmod } \\\\\n",
     "\n",
     "\\hline\n",
     "\\end{array}\n",
@@ -657,7 +680,7 @@
     "# model.save(\"PIPEnet10.kmod\")\n",
     "# model.save(\"KITTInet.kmod\")\n",
     "# model.save(\"ModelNet100pts.kmod\")\n",
-    "model.save(\"KITTICARLA100.kmod\") \n",
+    "# model.save(\"KITTICARLA100.kmod\") \n",
     "\n",
     "#load network\n",
     "# model = tf.keras.models.load_model(\"Net.kmod\")\n",
