--- a/v3/VolpeNDTvsICET.ipynb
+++ b/v3/VolpeNDTvsICET.ipynb
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 171,
    "id": "cf5ed892",
    "metadata": {
     "scrolled": false
@@ -3363,10 +3363,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd5d7ec91c0>"
+       "<matplotlib.legend.Legend at 0x7fd5d7e0df70>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3415,7 +3415,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "480ef654",
+   "id": "a395b142",
    "metadata": {},
    "outputs": [
     {
