--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -63,11 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model(\"CP.kmod\") #test\n",
+    "# model = tf.keras.models.load_model(\"CP.kmod\") #temp\n",
     "# model = tf.keras.models.load_model(\"KITTICARLA100.kmod\") #best for KITTI CARLA\n",
     "# model = tf.keras.models.load_model(\"Net.kmod\") # best so far for shadowed ModelNet40 point clouds\n",
     "# model = tf.keras.models.load_model(\"SmallNet.kmod\") # best for uniform sampling dataset\n",
-    "# model = tf.keras.models.load_model(\"ModelNet100pts.kmod\")\n",
+    "model = tf.keras.models.load_model(\"combinedNet.kmod\") #KITTI + KITTI_CARLA + ModelNet40\n",
     "# model = tf.keras.models.load_model(\"KITTInet.kmod\") #50pts, 3cm MAE, trained a while ago..."
    ]
   },
@@ -146,8 +146,7 @@
     "# d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_scan2_50pts.npy\")\n",
     "# gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_ground_truth_50pts.npy\")\n",
     "\n",
-    "# #100pts KITTI_CARLA dataset Initial transform  ~ N(0,3)\n",
-    "# #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan1_100pts.npy\")\n",
     "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan2_100pts.npy\")\n",
     "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_ground_truth_100pts.npy\")\n",
@@ -155,11 +154,34 @@
     "d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan1_100pts.npy\")\n",
     "d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan2_100pts.npy\")\n",
     "gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_ground_truth_100pts.npy\")\n",
-    "\n",
     "d1 = np.append(d1, d1_2, axis = 0)\n",
     "d2 = np.append(d2, d2_2, axis = 0)\n",
     "gt = np.append(gt, gt_2, axis = 0)\n",
-    "# #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
+    "d1_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan1_100pts_skip3.npy\")\n",
+    "d2_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan2_100pts_skip3.npy\")\n",
+    "gt_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_ground_truth_100pts_skip3.npy\")\n",
+    "d1 = np.append(d1, d1_4, axis = 0)\n",
+    "d2 = np.append(d2, d2_4, axis = 0)\n",
+    "gt = np.append(gt, gt_4, axis = 0)\n",
+    "\n",
+    "d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
+    "d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
+    "gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
+    "d1 = np.append(d1, d1_5, axis = 0)\n",
+    "d2 = np.append(d2, d2_5, axis = 0)\n",
+    "gt = np.append(gt, gt_5, axis = 0)\n",
+    "\n",
+    "# d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan1_100pts.npy\")\n",
+    "# d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan2_100pts.npy\")\n",
+    "# gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_ground_truth_100pts.npy\")\n",
+    "d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan1_100pts_skip3.npy\")\n",
+    "d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan2_100pts_skip3.npy\")\n",
+    "gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_ground_truth_100pts_skip3.npy\")\n",
+    "d1 = np.append(d1, d1_3, axis = 0)\n",
+    "d2 = np.append(d2, d2_3, axis = 0)\n",
+    "gt = np.append(gt, gt_3, axis = 0)\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "points_per_sample = 100 #100          #points sampled from each voxel\n",
     "tsplit = 0.95                   #this fraction goes into training\n",
@@ -168,6 +190,15 @@
     "scan2 = np.reshape(d2, [-1, points_per_sample, 3])\n",
     "ntrain = int(tsplit*tf.shape(scan1)[0].numpy())\n",
     "\n",
+    "#randomly shuffle train and test data _______________\n",
+    "np.random.seed(10)\n",
+    "randy = np.linspace(0,np.shape(gt)[0]-1,np.shape(gt)[0]).astype(int)\n",
+    "np.random.shuffle(randy)\n",
+    "scan1 = scan1[randy]\n",
+    "scan2 = scan2[randy]\n",
+    "gt = gt[randy]\n",
+    "#____________________________________________________\n",
+    "\n",
     "x_train = np.append(scan1[:ntrain], scan2[:ntrain], axis = 1)\n",
     "x_test = np.append(scan1[ntrain:], scan2[ntrain:], axis = 1)\n",
     "print(np.shape(x_train))\n",
@@ -175,6 +206,16 @@
     "\n",
     "y_train = gt[:ntrain] #for standard training/ test data\n",
     "y_test = gt[ntrain:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87af808e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -383,7 +424,7 @@
     "print(\"x_test\" , tf.shape(x_test))\n",
     "print(\"y_test\" , tf.shape(y_test))\n",
     "\n",
-    "runlen = 3\n",
+    "runlen = 1\n",
     "corr_sum = np.zeros([tf.shape(x_test)[0].numpy(),1,3]) #init var to store correction contributions\n",
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[:,None,:] #show what the network thinks\n",
@@ -432,7 +473,7 @@
     "# R = [-0.5,0.5] #range\n",
     "# ax.hist(dnn_error[:,0], num_bins, R, histtype='step', fill=False, color = (0,0,1), label = 'DNN (ours)')\n",
     "# ax.hist(D2D_error[:,0], num_bins, R, histtype='step', fill=False, color = (1,0,0), label = 'D2D')\n",
-    "ax.set_title(\"Registration Error, KITTI_CARLA\")\n",
+    "ax.set_title(\"Registration Error, combined data\")\n",
     "# ax.set_title(\"Registration Error, Shadowed ModelNet40 Dataset\")\n",
     "# ax.set_title(\"Registration Error, Uniformly Sampled ModelNet40 Dataset\")\n",
     "R = [0, 0.7]\n",
@@ -474,7 +515,7 @@
     "# ax.set_xlabel('$\\Delta_{D2D}$') #nope\n",
     "ax.set_xlim([0,1])\n",
     "ax.set_ylabel('Magnitude error DNN (ours)')\n",
-    "ax.set_title(\"KITTI_CARLA\")\n",
+    "ax.set_title(\"combined data\")\n",
     "\n",
     "ax.scatter(mag_D2D, mag_DNN, alpha = 1, s = 0.2)\n",
     "\n",
@@ -501,7 +542,7 @@
     "ax.set_ylabel('Magnitude Difference Between D2D and DNN')\n",
     "# ax.set_xlabel('$\\Delta_{D2D}$') #nope\n",
     "# ax.set_xlim([0,1])\n",
-    "ax.set_title(\"KITTI\")\n",
+    "ax.set_title(\"combined data\")\n",
     "\n",
     "# print(D2D_distance[:10])\n",
     "# print(dnn_estimates[:10])\n",
