more figures, working on custom loss function to suppress error in ambiguous directions

--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -99,7 +99,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 20*1024\n",
+    "    memlim = 16*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
     "    print(e)\n",
@@ -271,6 +271,16 @@
     "d1 = np.append(d1, d1_3, axis = 0)\n",
     "d2 = np.append(d2, d2_3, axis = 0)\n",
     "gt = np.append(gt, gt_3, axis = 0)\n",
+    "\n",
+    "d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts_skip3.npy\")\n",
+    "d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts_skip3.npy\")\n",
+    "gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts_skip3.npy\")\n",
+    "# d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts.npy\")\n",
+    "# d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts.npy\")\n",
+    "# gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts.npy\")\n",
+    "d1 = np.append(d1, d1_6, axis = 0)\n",
+    "d2 = np.append(d2, d2_6, axis = 0)\n",
+    "gt = np.append(gt, gt_6, axis = 0)\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "\n",
@@ -543,13 +553,12 @@
     "# from network import PointNet as Net\n",
     "# from network import Attention as Net\n",
     "\n",
-    "runLen = 64\n",
+    "runLen = 8\n",
     "\n",
     "def scheduler(epoch, learning_rate):\n",
     "    part1 = runLen//4\n",
     "    part2 = 2*runLen//4\n",
     "    part3 = 3*runLen//4\n",
-    "    \n",
     "    if epoch < part1:\n",
     "        learning_rate = 0.0005\n",
     "        return learning_rate\n",
@@ -564,7 +573,7 @@
     "        return learning_rate\n",
     "\n",
     "model = Net() #comment out to re-train existing network\n",
-    "model.compile(optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0001),\n",
+    "model.compile(optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0005),\n",
     "              loss = tf.keras.losses.MeanAbsoluteError()) #was MeanSquaredError()\n",
     "\n",
     "summary = model.summary()\n",
@@ -580,7 +589,7 @@
     "\n",
     "#using tf.data() pipeline instead of simply feeding in np arrays\n",
     "trace = model.fit(train_dataset, epochs=runLen, validation_data = val_dataset, \n",
-    "                  verbose=1, callbacks = [cp,scheduler])\n",
+    "                  verbose=1, callbacks = [cp])\n",
     "\n",
     "#test- see if network can learn LUT\n",
     "# trace = model.fit(x = x_train, y = compact, batch_size = 2048, epochs=runLen, verbose=1, \n",
