found indexing but in compact loss function, look like I can actually get it to work

--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Network"
+    "# Train Network (standard)"
    ]
   },
   {
@@ -589,7 +589,7 @@
     "\n",
     "#using tf.data() pipeline instead of simply feeding in np arrays\n",
     "trace = model.fit(train_dataset, epochs=runLen, validation_data = val_dataset, \n",
-    "                  verbose=1, callbacks = [cp])\n",
+    "                  verbose=1, callbacks = [cp, scheduler])\n",
     "\n",
     "#test- see if network can learn LUT\n",
     "# trace = model.fit(x = x_train, y = compact, batch_size = 2048, epochs=runLen, verbose=1, \n",
